test: cover Roteiro with 100%